@@ -1,5 +1,12 @@
 2011-12-15  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* util/grub-mkimage.c (generate_image): Decrease the higher limit
+	because of stack.
+	* util/grub-setup.c (setup): Don't add redundancy past the higher load
+	limit.
+
+2011-12-15  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/gfxmenu/gui_label.c (label_paint): Handle the case
 	text_width > available width a bit more gracefully.
 
